[package]
name = "hyper-techempower"
version = "0.5.0"
edition = "2018"
authors = [
    "Steve Klabnik <steve@steveklabnik.com>",
    "Alexander Polyakov <plhk@sdf.org>",
    "Sean McArthur <sean@seanmonstar.com>"
]

[[bin]]
name = "hyper-techempower"
path = "src/main.rs"

[[bin]]
name = "hyper-db-techempower"
path = "src/main_db.rs"

[dependencies]
# Disable default runtime, so that tokio single thread can be used instead.
hyper = { version = "0.14", features = ["server", "http1"], default-features = false }
# Since no logs are allowed anyways, just compile-time turn them all off
log = { version = "0.4", features = ["release_max_level_off"] }
markup = "0.3.1"
net2 = "0.2"
num_cpus = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "net", "time"] }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
v_htmlescape = "0.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
