[package]
name = "hyper-techempower"
version = "0.5.0"
edition = "2018"
authors = [
    "Steve Klabnik <steve@steveklabnik.com>",
    "Alexander Polyakov <plhk@sdf.org>",
    "Sean McArthur <sean@seanmonstar.com>",
]

[dependencies]
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
deadpool-postgres = "0.14.1"
fastrand = "2.3.0"
http = "1.3.1"
http-body-util = "0.1.3"
# Disable default runtime, so that tokio single thread can be used instead.
hyper = { version = "1.6.0", features = [
    "server",
    "http1",
], default-features = false }
hyper-util = { version = "0.1.10", features = [
    "http1",
    "server",
    "service",
    "tokio",
] }
# Since no logs are allowed anyways, just compile-time turn them all off
log = { version = "0.4.26", features = ["release_max_level_off"] }
markup = "0.15.0"
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socket2 = { version = "0.5.8", features = ["all"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
] }
tokio-postgres = { version = "0.7.13", default-features = false, features = [
    "runtime",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
v_htmlescape = "0.15.8"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
