[package]
name = "hyperlane_techempower"
version = "0.1.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A lightweight, high-performance, and cross-platform Rust HTTP server library built on Tokio. It simplifies modern web service development by providing built-in support for middleware, WebSocket, Server-Sent Events (SSE), and raw TCP communication. With a unified and ergonomic API across Windows, Linux, and MacOS, it enables developers to build robust, scalable, and event-driven network applications with minimal overhead and maximum flexibility."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/hyperlane-dev/hyperlane.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[dependencies]
futures = "0.3.31"
hyperlane = "10.14.0"
hyperlane-time = "0.7.12"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[features]
dev = []
