[package]
name = "iron"
version = "0.0.2"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
serde = "0.8.19"
serde_json = "0.8.3"
iron = "0.4.0"
router = "0.4.0"
persistent = "0.2.1"
hyper = "0.9.13"
rand = "0.3"
postgres = "0.13.3"
r2d2 = "0.7.1"
r2d2_postgres = "0.11.0"
mustache = "0.8.0"
rustc-serialize = "0.3"