[package]
name = "iron"
version = "0.0.3"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
serde = "0.8"
serde_json = "0.8"
iron = "0.4"
router = "0.4"
persistent = "0.2"
hyper = "0.9"
rand = "0.3"
r2d2 = "0.7"
postgres = "0.15.1"
r2d2_postgres = "0.13"
mustache = "0.8"
rustc-serialize = "0.3"
