[package]
name = "iron"
version = "0.0.4"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
iron = "0.5"
router = "0.5"
persistent = "0.3"
hyper = "0.10"
rand = "0.3"
r2d2 = "0.7"
postgres = "0.15.1"
r2d2_postgres = "0.13"
mustache = "0.8"
rustc-serialize = "0.3"
