[package]
name = "may-minihttp"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
edition = "2018"

[dependencies]
may = "0.3"
mimalloc = "0.1"
num_cpus = "1.0"
oorandom = "11"
smallvec = "1.1"
buf-min = { version = "0.7", features = ["bytes"] }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git" }
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
