[package]
name = "may-minihttp"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
edition = "2021"

[dependencies]
atoi = "2"
bytes = "1"
num_cpus = "1.0"
smallvec = "1.1"

log = { version = "0.4", features = ["release_max_level_off"] }
mimalloc = { version = "0.1", default-features = false }
nanorand = { version = "0.7", default-features = false, features = ["std", "wyrand"] }

buf-min = { version = "0.7", features = ["bytes"] }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }

may = { version = "0.3.25", default-features = false }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git" }
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
