[package]
name = "nano-web"
version = "1.1.3"
edition = "2021"
description = "Static file server built with Rust with pre-compressed in-memory caching"
authors = ["James Cleveland <jc@blit.cc>"]
license = "MIT"
repository = "https://github.com/radiosilence/nano-web"
homepage = "https://github.com/radiosilence/nano-web"
documentation = "https://docs.rs/nano-web"
keywords = ["web", "server", "static", "http", "spa"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"
exclude = ["public/", ".github/", "docs/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", features = ["tokio", "tracing"] }
hyper = { version = "1.6", features = ["server", "http1"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = [
    "fs",
    "compression-br",
    "compression-gzip",
    "set-header",
    "trace",
] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = "2.7"
anyhow = "1.0"
walkdir = "2.0"
bytes = "1.10"
md5 = "0.8"
brotli = "8.0"
flate2 = "1.1"
zstd = "0.13"
fxhash = "0.2"
ahash = "0.8"
dashmap = "6.1"
memmap2 = "0.9"
rayon = "1.10"
urlencoding = "2.1"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
cargo-release = "0.25.18"


[[bin]]
name = "nano-web"
path = "src/main.rs"

# Dev profile for faster compilation during development
[profile.dev]
opt-level = 1
debug = true

# Release profile optimized for performance and size
[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
