[package]
name = "ntex-bench"
version = "2.0.0"
edition = "2018"

[[bin]]
name = "ntex"
path = "src/main.rs"

[[bin]]
name = "ntex-compio"
path = "src/main.rs"

[[bin]]
name = "ntex-default"
path = "src/main.rs"

[[bin]]
name = "ntex-db"
path = "src/main_db.rs"

[[bin]]
name = "ntex-db-compio"
path = "src/main_db.rs"

[[bin]]
name = "ntex-db-default"
path = "src/main_db.rs"

[[bin]]
name = "ntex-plt"
path = "src/main_plt.rs"

[[bin]]
name = "ntex-plt-compio"
path = "src/main_plt.rs"

[[bin]]
name = "ntex-plt-default"
path = "src/main_plt.rs"

[features]
default = []

# tokio runtime
tokio = ["ntex/tokio"]

# compio runtime
compio = ["ntex/compio"]

# default-rt runtime
default-rt = ["ntex/default-rt"]

[dependencies]
ntex = "2.12"
ntex-compio = "0.2"
ntex-bytes = { version = "0.1.21", features=["simd"] }
mimalloc = { version = "0.1.25", default-features = false }
snmalloc-rs = { version = "0.3.3", features = ["native-cpu"] }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
buf-min = { version = "0.7", features = ["ntex-bytes"] }
env_logger = "0.11"
nanorand = { version = "0.7", default-features = false, features = ["std", "wyrand", "tls"] }
atoi = "2.0"
futures = "0.3"
sonic-rs = "0.3.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
tok_io = {version = "1", package = "tokio" }
tokio-postgres = { git="https://github.com/fafhrd91/postgres.git", branch="ntex-2" }

[target.'cfg(target_os = "linux")'.dependencies]
compio-driver = { version = "*", features = ["io-uring"]}

[patch.crates-io]
ntex = { git = "https://github.com/ntex-rs/ntex.git" }
ntex-io = { git = "https://github.com/ntex-rs/ntex.git" }
ntex-iodriver = { git = "https://github.com/ntex-rs/ntex.git" }
ntex-net = { git = "https://github.com/ntex-rs/ntex.git" }
ntex-rt = { git = "https://github.com/ntex-rs/ntex.git" }
ntex-runtime = { git = "https://github.com/ntex-rs/ntex.git" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
